src/test/ui/associated-types/hr-associated-type-bound-2.stderr
error[E0599]: the method `f` exists for type `u32`, but its trait bounds were not satisfied
  --> $DIR/hr-associated-type-bound-2.rs:19:10
   |
LL |     1u32.f("abc");
   |          ^ method cannot be called on `u32` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `<u32 as X<'b>>::U: Clone`
           which is required by `u32: X`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
